# BGM-Service

./: .dockerignore  .gitignore  Dockerfile  README.md  bgm_summarization.py  docker-compose.yml  pyproject.toml
config/: constant_config.py  path_config.py  schema_config.py
functionals/: download.py  logger.py  prompts.py  utils.py
