[project]
name = "bgm-service"
version = "0.1.0"
description = "service to describe background music"
requires-python = ">=3.11,<3.12"
dependencies = [
    # PyTorch stack with CUDA 12.4 (explicit version + platform marker)
    "torch==2.4.0+cu124",
    "torchaudio==2.4.0+cu124",
    "torchvision==0.19.0+cu124",
    # Core dependencies
    "transformers==4.32.0",
    "transformers_stream_generator==0.0.4",
    "numpy>=1.24.0,<2.0.0",
    "accelerate",
    "einops",
    "qwen-vl-utils",
    "pillow",
    "scipy",
    "tiktoken",
    "matplotlib",
    "tensorboard",
    "modelscope>=1.36.2",
    "fastapi>=0.136.1",
    "uvicorn>=0.46.0",
    "librosa>=0.11.0",
]

[tool.uv]
required-environments = [
    "sys_platform == 'linux' and platform_machine == 'x86_64'"
]

[tool.uv.sources]
torch = { index = "pytorch-cu124" }
torchaudio = { index = "pytorch-cu124" }
torchvision = { index = "pytorch-cu124" }

# ✅ Chinese mirror as DEFAULT for all non-explicit packages
[[tool.uv.index]]
name = "tuna"
url = "https://mirrors.tuna.tsinghua.edu.cn/pypi/web/simple"
default = true

[[tool.uv.index]]
name = "pytorch-cu124"
url = "https://download.pytorch.org/whl/cu124"
explicit = true  # ✅ Critical: ONLY search this index for packages listed above
